# mytorch

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
src/mytorch/: __init__.py  core.py
src/mytorch/autograd/: __init__.py  grad_operation.py
src/mytorch/func/tensor/: add.py
src/mytorch/nn/modules/: linear.py
src/mytorch/optim/: SGD.py
src/mytorch/tensor/: __init__.py  tensor.py  tensor_mult.py
tests/: test_core.py
tests/tensor/: test_add.py  test_copy.py  test_elem_mult.py  test_mixed_op.py  test_mult.py  test_reshape.py  test_ser.py  test_tensor_mult.py
