[project]
name = "mytorch"
version = "0.1.0"
description = "A self-written torch-like ML package."
authors = [
  { name = "bobito25", email = "" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bobito25/mytorch"
"Bug Tracker" = "https://github.com/bobito25/mytorch/issues"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
