[project]
name = "mytorch"
version = "0.1.0"
description = "A self-written torch-like ML package."
authors = [
  { name = "bobito25" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "numpy>=2.3.5,<3"
]
[dependency-groups]
dev = [
  "pytest >=9.0.1,<10",
  "pytest-cov>=7.0.0,<8",
]

[project.urls]
"Homepage" = "https://github.com/bobito25/mytorch"
"Bug Tracker" = "https://github.com/bobito25/mytorch/issues"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=mytorch --cov-report html --cov-config=.coveragerc"
